The final push on our end :'(

--- a/public/css/partners.css
+++ b/public/css/partners.css
@@ -3,7 +3,7 @@ body{
 }
 
 .hero-section {
-  background-image: url("../img/partners-hero-img.png");
+  background-image: url("../img/partners-hero-img(3).png");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
