--- a/views/about.hbs
+++ b/views/about.hbs
@@ -40,9 +40,9 @@
                  </div>
              </header>
              <hr class="-mt-4">
-             <h1 class="text-4xl text-center tracking-wider p-2 mt-48 xl:mt-72 font-sans font-semibold sm:text-4xl md:text-4xl xl:text-5xl uppercase">ABOUT</h1>
+             <h1 class="text-4xl text-center tracking-wider p-2 mt-48 xl:mt-64 font-sans font-semibold sm:text-4xl md:text-2xl xl:text-3xl uppercase">ABOUT</h1>
              <hr class="coverHr w-1/4 center mx-auto">
-             <div class="tracking-widest text-center pt-1 xl:text-3xl">
+             <div class="tracking-widest text-center pt-1 xl:text-xl">
                <p>Learn more about VINCI's</p>
                <p>mission, origin and teams</p>
              </div>
@@ -52,11 +52,11 @@
           <section class="border-b border-gray-300 border-opacity-25 bg-secondary">
               <section class="lg:flex mb-4 lg:mt-24 lg:mb-20 xl:mt-24">
                  <div class="w-3/5 ml-20 m-2 mt-6 p-6 pt-14">
-                     <h2 class ="text-primary font-semibold text-3xl xl:text-4xl text-left tracking-wider font-sans">
+                     <h2 class ="text-primary font-semibold text-3xl xl:text-3xl text-left tracking-wider font-sans">
                          A Note From VINCI
                      </h2>
                      <hr class="mt-4">
-                     <p class="text-primary text-left mt-6 tracking-widest leading-8 xl:text-2xl">
+                     <p class="text-primary text-left mt-6 tracking-widest leading-8 xl:text-xl">
                        Virtual Reality is one of the greatest communication and knowledge transfer
                        tools ever invented. But before its benefits can be fully realized,
                        the barrier to create simulations must be overcome.
@@ -80,9 +80,9 @@
          <section class="border-b border-gray-300 border-opacity-25 bg-secondary">
            <section class="lg:flex pb-6 mb-4 text-primary lg:mt-16 xl:mt-24">
              <div class="w-3/5 ml-20 m-2 mt-6 p-6 pt-14">
-               <h2 class="text-primary font-semibold text-3xl xl:text-4xl text-left tracking-wider font-sans"> Origins </h2>
+               <h2 class="text-primary font-semibold text-3xl xl:text-3xl text-left tracking-wider font-sans"> Origins </h2>
                <hr class="mt-4">
-               <p class="pb-4 text-primary text-left mt-6 tracking-widest leading-6 xl:text-2xl">600 years ago, Leonardo da Vinci was filling the pages of his CODEX notebooks with fascinating observations and inventions such as the human brain and optics.
+               <p class="pb-4 text-primary text-left mt-6 tracking-widest leading-6 xl:text-xl">600 years ago, Leonardo da Vinci was filling the pages of his CODEX notebooks with fascinating observations and inventions such as the human brain and optics.
                  <br><br>
                  Vinci's world was not only brilliant, but was also well documented; highly detailed sketches accompanied diagrams and astute observations. Read the CODEX Leicester here.VINCI creates tools to lower the complexity, knowledge, and cost needed to create and manage Virtual Reality simulations. Through our innovations, we will enable a new generation of thinkers, creators, and instructors to create their own.
                  <br><br>
@@ -91,7 +91,7 @@
                  Inspired by Vinci, we at VINCI aim to transform the way we communicate and educate the world through a new medium: Virtual Reality.
                </p>
              </div>
-             <div class="w-2/5 p-12">
+             <div class="w-2/5 p-12 mt-16">
                 <div class="imgSize2A">
                     <!-- <img class="object-cover lg:h-full mt-6" src="../public/img/leo.png" alt="picture of davinci"> -->
                   </div>
@@ -103,10 +103,10 @@
 
          <section class=" mb-4 text-primary border-b border-gray-300 border-opacity-25 bg-secondary">
            <section class="text-gray-700 body-font">
-                 <div class="container pr-8 pl-4 py-24 mx-auto">
+                 <div class="container pr-8 pl-4 xl:ml-4 py-24 mx-auto">
                    <div class="flex flex-col text-center w-full mb-20">
                    <!--Come back here later to practice responsive-->
-                   <h1 class="sm:text-3xl text-2xl xl:text-4xl font-medium title-font mb-4 text-primary font-sans xl:mt-10">Our Team</h1>
+                   <h1 class="sm:text-3xl text-2xl xl:text-3xl font-medium title-font mb-4 text-primary font-sans xl:mt-10">Our Team</h1>
                      <p class="lg:w-2/3 mx-auto leading-relaxed text-base text-primary xl:text-2xl ">Click an image to learn more about our team members.</p>
                    </div>
                    <div class="flex flex-wrap -m-2">
