--- a/views/contact.hbs
+++ b/views/contact.hbs
@@ -20,7 +20,7 @@
     </style>
     <section id = "container">
       <div class="main-wrapper">
-        <section id="cover" class="w-full h-screen bg-center bg-cover text-primary lg:h-screen background cover overflow-hidden" style="background-image: url('../public/img/contact-hero-img.png')">
+        <section id="cover" class="w-full h-screen bg-center bg-cover text-primary lg:h-screen background cover overflow-hidden" style="background-image: url('../public/img/contact-hero-img(3).png')">
           <header class="text-gray-700 body-font ">
               <div class="container mx-auto flex flex-wrap p-5 flex-col md:flex-row items-center">
                 <a href="/" class="flex items-center mb-4 md:mb-0 lg:-mb-6 xl:-mb-8">
@@ -39,8 +39,8 @@
               </div>
           </header>
           <hr class="-mt-4">
-          <h1 class="text-left tracking-wider p-4 mt-50 -mb-4 ml-50 sm:text-4xl md:text-4xl xl:text-5xl uppercase font-sans font-semibold lg:mt-48 xl:mt-72">CONTACT</h1>
-          <div class="tracking-widest text-left xl:text-3xl p-4 ml-50 xl:mt-12">
+          <h1 class="text-left tracking-wider p-4 mt-50 -mb-4 ml-50 sm:text-4xl md:text-4xl xl:text-4xl uppercase font-sans font-semibold lg:mt-48 xl:mt-48">CONTACT</h1>
+          <div class="tracking-widest text-left lg:text-xl xl:text-xl p-4 ml-50 lg:mt-4 xl:mt-4">
             <p>Have any questions?</p>
             <p>Drop us a message.</p>
             <p>Book a demo.</p>
@@ -51,7 +51,7 @@
          <section class="px-16 bg-center bg-cover lg:mb-0 mb-4 lg:-mb-32 lg:h-screen background first" style="background-image: url('../public/img/contact-bg.png')">
            <section class="text-gray-700 body-font relative">
              <div class=" container px-5 py-24 mx-auto flex sm:flex-no-wrap flex-wrap">
-             <div class="bg-opacity-75 lg:w-2/3 md:w-1/2 flex flex-col md:ml-auto w-full md:py-8 mt-8 md:mt-0">
+             <div class="bg-opacity-75 lg:w-2/3 md:w-1/2 flex flex-col md:ml-auto w-full md:py-8 mt-8 md:mt-0 xl:-mt-4">
               <h2 class="text-primary text-3xl mb-1 font-medium title-font text-left xl:text-4xl">Contact VINCI</h2>
                   <hr class="w-4/5 mb-8">
                    <input class="w-4/5 opacity-75 bg-white border border-gray-400 focus:outline-none focus:border-indigo-500 text-base px-4 py-2 mb-4" placeholder="Name" type="text">
