--- a/views/services.hbs
+++ b/views/services.hbs
@@ -49,8 +49,8 @@
             <hr class="-mt-4">
 
 
-              <h1 class="text-left tracking-wider p-4 mt-50 -mb-4 ml-50 sm:text-4xl md:text-4xl lg:text-4xl xl:text-4xl uppercase font-sans font-semibold lg:mt-48 xl:mt-56">Codex</h1>
-              <div class="tracking-widest text-left xl:text-3xl p-4 ml-50 xl:mt-8">
+              <h1 class="text-left tracking-wider p-4 mt-50 -mb-4 ml-50 sm:text-4xl md:text-4xl lg:text-3xl xl:text-4xl uppercase font-sans font-semibold lg:mt-48 xl:mt-48">Codex</h1>
+              <div class="tracking-widest text-left xl:text-xl p-4 ml-50 xl:mt-4">
                 <p>Access the entire codex suite or</p>
                 <p>pick and choose which toolkits to use.</p>
               </div>
@@ -58,10 +58,10 @@
         </section>
 
         <section class="border-b border-gray-300 border-opacity-25 bg-secondary">
-          <section class="text-lg p-12 bg-secondary md:p-20 lg:p-20">
-            <h2 class="text-4xl text-left py-4 mx-4 font-medium font-sans xl:text-4xl xl:mt-32">Educate Your Workforce Like Never Before</h2>
-            <hr class=" w-3/4 py-4 font-thin mx-4">
-            <section class="tracking-widest text-left xl:text-2xl mx-4">
+          <section class="text-lg p-12 bg-secondary md:p-20 lg:px-32 lg:mb-16 xl: xl:">
+            <h2 class="text-3xl text-left py-4 mx-4 font-medium font-sans xl:text-3xl xl:mt-24">Educate Your Workforce Like Never Before</h2>
+            <hr class=" w-3/5 py-4 font-thin mx-4">
+            <section class="tracking-widest text-left xl:text-xl mx-4">
               <p>
                 Instructors face limited time, high costs, and potential hazards during high consequence training. These limitations create a gap between the amount of time/repetitions needed for effective knowledge retention and the available opportunities to train.
               </p>
@@ -82,10 +82,10 @@
         <section class="border-b border-gray-300 border-opacity-25 bg-secondary">
           <section class="authoring lg:flex m-auto md:p-20 lg:p-20">
             <section class="-ml-2 w-2/3">
-              <h2 class="text-3xl font-medium uppercase py-4 text-left font-sans xl:text-4xl xl:mt-32">Codex Authoring</h2>
-              <hr class="-ml-2 w-2/3">
-              <h4 class="text-xl xl:text-3xl font-medium my-4">Fully Customize Your Simulations</h4>
-              <ul class="text-md xl:text-2xl">
+              <h2 class="text-3xl font-medium uppercase py-4 text-left font-sans xl:text-3xl xl:mt-16">Codex Authoring</h2>
+              <hr class="w-3/4">
+              <h4 class="text-xl xl:text-xl font-medium my-4">Fully Customize Your Simulations</h4>
+              <ul class="text-md xl:text-xl">
                 <li class="tracking-wider leading-loose">
                   Fully customize simulations, such as interactions, instructional content, and training manuals as easily as Powerpoint.
                 </li>
@@ -107,10 +107,10 @@
         <section class="border-b border-gray-300 border-opacity-25  bg-secondary">
           <section class="authoring lg:flex m-auto md:p-20 lg:p-20">
             <section class="-ml-2 w-2/3">
-              <h1 class="text-3xl font-medium uppercase py-4 text-left font-sans xl:text-4xl xl:mt-32">Codex Simulator</h1>
+              <h1 class="text-3xl font-medium uppercase py-4 text-left font-sans xl:text-3xl xl:mt-16">Codex Simulator</h1>
               <hr class="w-3/4">
-              <h4 class="text-xl xl:text-3xl font-medium my-4">Highly Realistic, Interactive VR</h4>
-              <ul class="text-md xl:text-2xl">
+              <h4 class="text-xl xl:text-xl font-medium my-4">Highly Realistic, Interactive VR</h4>
+              <ul class="text-md xl:text-xl">
                 <li class="tracking-wider leading-loose">
                   Train in highly Realistic 3D environments of simulations created in Codex Authoring.
                 </li>
@@ -133,10 +133,10 @@
           <section class="border-b border-gray-300 border-opacity-25  bg-secondary">
             <section class="authoring lg:flex m-auto md:p-20 lg:p-20">
               <section class="-ml-2 w-2/3 ">
-                <h1 class="text-3xl font-semibold uppercase py-4 text-left font-sans xl:text-4xl xl:mt-32">Codex Analytics</h1>
+                <h1 class="text-3xl font-semibold uppercase py-4 text-left font-sans xl:text-3xl xl:mt-16">Codex Analytics</h1>
                 <hr class="w-3/4">
-                <h4 class="text-xl xl:text-3xl font-medium my-4">Robust Data Analytics</h4>
-                <ul class="text-md xl:text-2xl">
+                <h4 class="text-xl xl:text-xl font-medium my-4">Robust Data Analytics</h4>
+                <ul class="text-md xl:text-xl">
                   <li class="tracking-wider leading-loose">
                       Live stream multiple student views as they train in VR.
                   </li>
@@ -157,10 +157,10 @@
           <section class="border-b border-gray-300 border-opacity-25  bg-secondary">
             <section class="authoring lg:flex m-auto md:p-20 lg:p-20">
               <section class="-ml-2 w-2/3 ">
-                <h1 class="text-3xl font-semibold uppercase py-4 text-left font-sans xl:text-4xl xl:mt-32">Leverage low-cost VR</h1>
+                <h1 class="text-3xl font-semibold uppercase py-4 text-left font-sans xl:text-3xl xl:mt-16">Leverage low-cost VR</h1>
                 <hr class="w-3/4">
                 <h4 class="text-xl font-medium my-4"></h4>
-                <ul class="text-md xl:text-2xl">
+                <ul class="text-md xl:text-xl">
                   <li class="tracking-wider leading-loose">
                     Realistic training at 10% of the cost physical simulators and enable more than 10X the number of repetitions.
                   </li>
@@ -181,10 +181,10 @@
           <section class="border-b border-gray-300 border-opacity-25  bg-secondary">
             <section class="authoring lg:flex m-auto md:p-20 lg:p-20">
               <section class="-ml-2 w-2/3 ">
-                <h1 class="text-3xl font-semibold uppercase py-4 text-left font-sans xl:text-4xl xl:mt-32">Leverage low-cost VR</h1>
+                <h1 class="text-3xl font-semibold uppercase py-4 text-left font-sans xl:text-3xl xl:mt-16">Leverage low-cost VR</h1>
                 <hr class="w-3/4">
                 <h4 class="text-xl font-medium my-4"></h4>
-                <ul class="text-md xl:text-2xl">
+                <ul class="text-md xl:text-xl">
                     <li class="tracking-wider leading-loose">
                         Utilize smart insights from codex analytics to tailor training content to individual students.
                     </li>
@@ -202,10 +202,10 @@
           <section class="border-b border-gray-300 border-opacity-25  bg-secondary">
             <section class="authoring lg:flex m-auto md:p-20 lg:p-20">
               <section class="-ml-2 w-2/3 ">
-                <h1 class="text-3xl font-semibold uppercase py-4 text-left font-sans xl:text-4xl xl:mt-32">Scalable Collaboration</h1>
+                <h1 class="text-3xl font-semibold uppercase py-4 text-left font-sans xl:text-3xl xl:mt-16">Scalable Collaboration</h1>
                 <hr class="w-3/4">
                 <h4 class="text-xl font-medium my-4"></h4>
-                <ul class="text-md xl:text-2xl">
+                <ul class="text-md xl:text-xl">
                     <li class="tracking-wider leading-loose">
                       Enable an ecosystem of content by empowering your team to innovate and create.
                     </li>
