--- a/views/indexnew.hbs
+++ b/views/indexnew.hbs
@@ -23,9 +23,9 @@
           <header class="text-gray-700 body-font">
               <div class="container mx-auto flex flex-wrap p-5 flex-col md:flex-row items-center ">
                 <a href="/" class="flex items-center mb-4 md:mb-0 lg:-mb-6 xl:-mb-8 z-10">
-                  <img class="w-1/6 -mt-2 xl:w-1/4 lg:mt-2 xl:mt-2" src="../public/img/vinci-logo.png" alt="">
+                  <img class="w-1/6 -mt-2 xl:w-1/5 lg:mt-2 xl:mt-2" src="../public/img/vinci-logo.png" alt="">
                 </a>
-                <nav class="md:ml-auto flex flex-wrap items-center z-10 text-base justify-center text-primary text-lg xl:text-3xl font-semibold">
+                <nav class="md:ml-auto flex flex-wrap items-center z-10 text-base justify-center text-primary text-lg xl:text-xl font-semibold">
                   <h5>
                     <a href="/about" class="mr-4 hover:text-gray-900">About</a>
                     <a href="/services" class="mr-4 hover:text-gray-900">Solutions</a>
@@ -60,18 +60,18 @@
 
           </video>
           <section class="font-sans hero-text w-full p-4 absolute z-1 sm:mt-32 md:mt-40 lg: xl:mt-48">
-            <h3 class="font-sans sm:text-xl md:text-xl xl:text-2xl"> PREPARE FOR THE REAL WORLD
+            <h3 class="font-sans sm:text-xl md:text-xl xl:text-xl"> PREPARE FOR THE REAL WORLD
               <hr class="mt-4 w-1/3 mx-auto">
             </h3>
             <br>
              <h1 class="font-sans font-bold -mb-20 -mt-6 text-2xl md:text-2xl lg:text-3xl xl:text-4xl "> WITH A WORLD OF YOUR OWN
               <hr class=" w-1/3 mx-auto mb-10">
             </h1>
-           <h3 class="font-sans pt-12 sm:my-8 sm:text-xl md:text-xl xl:text-2xl xl:mb-10">Create, Analyze, and Train in <b class="bold">Virtual Reality</b></h3>
+           <h3 class="font-sans pt-12 sm:my-8 sm:text-xl md:text-xl xl:text-xl xl:mb-10">Create, Analyze, and Train in <b class="bold">Virtual Reality</b></h3>
     ​
-           <a id="learnMoreIntro" class="btn uppercase border p-4 hover:bg-gray-100 hover:opacity-3 hover:text-gray-600 sm:text-sm md:text-sm lg:text-base xl:text-lg" href="/services">Learn about our services</a>
+           <a id="learnMoreIntro" class="btn uppercase border p-4 hover:bg-gray-100 hover:opacity-3 hover:text-gray-600 sm:text-sm md:text-sm lg:text-base xl:text-base" href="/services">Learn about our services</a>
     ​
-    ​       <p class="down-arrow text-3xl xl:text-4xl sm:my-12 md:my-32">⌄</p>
+    ​       <p class="down-arrow text-3xl xl:text-4xl sm:my-12 md:my-32 xl:my-20">⌄</p>
           </section>
         </section>
 
@@ -80,17 +80,17 @@
       <section class="border-b border-gray-300 border-opacity-25 bg-secondary">
           <section class="lg:flex mb-4 ">
              <div class="w-3/5 ml-20 m-2 mt-16 xl:mt-40 p-6 pt-14">
-                 <h2 class ="text-primary font-medium text-3xl xl:text-4xl text-left tracking-wider font-sans">
+                 <h2 class ="text-primary font-medium text-3xl xl:text-3xl text-left tracking-wider font-sans">
                      Codex: A New Way to Train in VR
                  </h2>
                  <hr class="mt-4">
-                 <p class="text-primary text-left mt-6 tracking-widest leading-8  xl:text-xl">
+                 <p class="text-primary text-left mt-6 tracking-widest leading-8  xl:text-lg">
                  Effective training requires expensive equipment, generates potential safety hazards, and elongates training time.
                   With Codex, teams can now improve their training by creating, training in and analyzing immersive VR simulations.
                   </p>
 
                   <a id="learnMore" class="btn uppercase border p-4 hover:bg-gray-100 hover:opacity-3 hover:text-gray-600 sm:text-sm lg:text-sm sm:ml-1 sm:-my-4 sm:block md:ml-1 md:mt-10 lg:ml-1 lg:mt-32 lg:mb-32 xl:mt-40"  style="width:40%;"  href="/services">
-                    <p class="text-center xl:px-auto xl:text-xl">LEARN MORE ABOUT CODEX </p>
+                    <p class="text-center xl:px-auto">LEARN MORE ABOUT CODEX </p>
                   </a>
              </div>
              <div class="w-2/5 p-12">
@@ -119,10 +119,10 @@
                    <img src="../public/img/lightning.png" alt="">
                  </div>
                  <div class="flex-grow text-primary">
-                   <h2 class="text-gray-900 text-lg xl:text-3xl title-font font-medium mb-3 uppercase text-primary">Codex </h2>
-                   <p class="leading-relaxed text-base xl:text-xl">
+                   <h2 class="text-gray-900 text-lg xl:text-2xl title-font font-medium mb-3 uppercase text-primary">Codex </h2>
+                   <p class="leading-relaxed text-base xl:text-lg">
                      VINCI's flagship software, CODEX, enables instructors to rapidly create and edit their own training simulations.</p>
-                   <a href = "" class="mt-3 text-primary inline-flex items-center xl:text-xl">Learn More
+                   <a href = "" class="mt-3 text-primary inline-flex items-center xl:text-lg">Learn More
                      <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-2" viewBox="0 0 24 24">
                        <path d="M5 12h14M12 5l7 7-7 7"></path>
                      </svg>
@@ -135,9 +135,9 @@
                     <img class="object-fill" src="../public/img/affordable.png" alt="">
                  </div>
                  <div class="flex-grow text-primary">
-                   <h2 class="text-gray-900 text-lg xl:text-3xl title-font font-medium mb-3 text-primary">Low Cost</h2>
-                   <p class="leading-relaxed text-base xl:text-2xl">VINCI creates proprietary software and utilizes consumer hardware to lower the cost of creating and using VR.</p>
-                   <a href = "" class="mt-3 text-primary inline-flex items-center xl:text-2xl">Learn More
+                   <h2 class="text-gray-900 text-lg xl:text-2xl title-font font-medium mb-3 text-primary">Low Cost</h2>
+                   <p class="leading-relaxed text-base xl:text-lg">VINCI creates proprietary software and utilizes consumer hardware to lower the cost of creating and using VR.</p>
+                   <a href = "" class="mt-3 text-primary inline-flex items-center xl:text-lg">Learn More
                      <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-2" viewBox="0 0 24 24">
                        <path d="M5 12h14M12 5l7 7-7 7"></path>
                      </svg>
@@ -150,9 +150,9 @@
                     <img class="cover" src="../public/img/group.png" alt="">
                  </div>
                  <div class="flex-grow text-primary">
-                   <h2 class="text-gray-900 text-lg xl:text-3xl title-font font-medium mb-3 text-primary">Client Centric</h2>
-                   <p class="leading-relaxed text-base xl:text-xl">VINCI’s partners take the front seat; by working closely with your workforce, we can build the best simulations.</p>
-                   <a href = "" class="mt-3 text-primary inline-flex items-center xl:text-xl">Learn More
+                   <h2 class="text-gray-900 text-lg xl:text-2xl title-font font-medium mb-3 text-primary">Client Centric</h2>
+                   <p class="leading-relaxed text-base xl:text-lg">VINCI’s partners take the front seat; by working closely with your workforce, we can build the best simulations.</p>
+                   <a href = "" class="mt-3 text-primary inline-flex items-center xl:text-lg">Learn More
                      <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-2" viewBox="0 0 24 24">
                        <path d="M5 12h14M12 5l7 7-7 7"></path>
                      </svg>
