begin media query for titles

--- a/views/services.hbs
+++ b/views/services.hbs
@@ -49,8 +49,8 @@
             <hr class="-mt-4">
 
 
-              <h1 class="text-left tracking-wider p-4 mt-50 -mb-4 ml-50 sm:text-4xl md:text-4xl lg:text-3xl xl:text-4xl uppercase font-sans font-semibold lg:mt-48 xl:mt-48">Codex</h1>
-              <div class="tracking-widest text-left xl:text-xl p-4 ml-50 xl:mt-4">
+              <h1 class="text-left tracking-wider p-4 mt-50 -mb-4 ml-50 sm:text-4xl md:text-4xl lg:text-3xl xl:text-4xl uppercase font-sans font-semibold lg:mt-48 xl:mt-48" id = "codexTitle">Codex</h1>
+              <div class="tracking-widest text-left xl:text-xl p-4 ml-50 xl:mt-4" id="codexSubtitle">
                 <p>Access the entire codex suite or</p>
                 <p>pick and choose which toolkits to use.</p>
               </div>
