--- a/public/css/services.css
+++ b/public/css/services.css
@@ -53,7 +53,7 @@ background-image: url("../img/codexscreenshot.JPG");
   background-image: url("https://images.unsplash.com/photo-1538388149542-5e24932d11a8?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=967&q=80");
 }
 
-@media only screen and (min-width: 1024px) and (max-height: 768px){
+@media only screen and (min-width: 1024px){
 
   #codexTitle{
     margin-top: 16.9rem;
@@ -66,7 +66,7 @@ background-image: url("../img/codexscreenshot.JPG");
 
 }
 
-@media only screen and (min-width: 1280px) and (max-height: 800px){
+@media only screen and (min-width: 1280px){
   #codexTitle{
     margin-top: 16.8rem;
     margin-left: 13.4rem;
@@ -77,7 +77,7 @@ background-image: url("../img/codexscreenshot.JPG");
   }
 }
 
-@media only screen and (min-width: 1366px) and (max-height: 768px){
+@media only screen and (min-width: 1366px){
 
   #codexTitle {
     margin-top: 16rem;
@@ -89,7 +89,7 @@ background-image: url("../img/codexscreenshot.JPG");
   }
 }
 
-@media only screen and (min-width: 1440px) and (max-height: 900px){
+@media only screen and (min-width: 1440px){
   #codexTitle {
     margin-top: 19.7rem;
     margin-left: 15.3rem;
@@ -99,7 +99,7 @@ background-image: url("../img/codexscreenshot.JPG");
   }
 }
 
-@media only screen and (min-width: 1920px) and (max-height: 1080px) {
+@media only screen and (min-width: 1920px){
   #codexTitle {
     margin-top: 22.2rem;
     margin-left: 21rem;
