applied quick fix to others

--- a/views/contact.hbs
+++ b/views/contact.hbs
@@ -39,8 +39,8 @@
               </div>
           </header>
           <hr class="-mt-4">
-          <h1 class="text-left tracking-wider p-4 mt-50 -mb-4 ml-50 sm:text-4xl md:text-4xl xl:text-4xl uppercase font-sans font-semibold lg:mt-48 xl:mt-48">CONTACT</h1>
-          <div class="tracking-widest text-left lg:text-xl xl:text-xl p-4 ml-50 lg:mt-4 xl:mt-4">
+          <h1 class="text-left tracking-wider p-4 mt-50 -mb-4 ml-50 sm:text-4xl md:text-4xl xl:text-4xl uppercase font-sans font-semibold lg:mt-48 xl:mt-48" id="codexTitle">CONTACT</h1>
+          <div class="tracking-widest text-left lg:text-xl xl:text-xl p-4 ml-50 lg:mt-4 xl:mt-4" id="codexSubtitle">
             <p>Have any questions?</p>
             <p>Drop us a message.</p>
             <p>Book a demo.</p>
