--- a/public/css/mobile.css
+++ b/public/css/mobile.css
@@ -98,3 +98,69 @@ img.vr-googles{
 }
 
 }
+@media only screen and (min-width: 1024px){
+
+  #codexTitle{
+    margin-top: 16.9rem;
+    margin-left: 9.5rem;
+  }
+
+ #codexSubtitle{
+   margin-left: 9.7rem;
+ }
+
+}
+
+@media only screen and (min-width: 1280px){
+  #codexTitle{
+    margin-top: 16.8rem;
+    margin-left: 13.4rem;
+  }
+
+  #codexSubtitle{
+    margin-left: 13.4rem;
+  }
+}
+
+@media only screen and (min-width: 1366px){
+
+  #codexTitle {
+    margin-top: 16rem;
+    margin-left: 14.5rem;
+  }
+
+  #codexSubtitle{
+    margin-left: 14.5rem;
+  }
+}
+
+@media only screen and (min-width: 1440px){
+  #codexTitle {
+    margin-top: 19.7rem;
+    margin-left: 15.3rem;
+  }
+  #codexSubtitle{
+    margin-left: 15.3rem;
+  }
+}
+
+@media only screen and (min-width: 1920px){
+  #codexTitle {
+    margin-top: 22.2rem;
+    margin-left: 21rem;
+  }
+  #codexSubtitle {
+    margin-left: 21rem;
+  }
+}
+
+@media only screen and (min-width: 1920px) and (min-height: 1200px){
+  #codexTitle {
+    margin-top: 25rem;
+    margin-left: 22rem;
+  }
+
+  #codexSubtitle {
+    margin-left: 22rem;
+  }
+}
