--- a/views/about.hbs
+++ b/views/about.hbs
@@ -105,7 +105,7 @@
            <section class="text-gray-700 body-font">
 
 
-                 <div class="container pr-8 pl-4 xl:ml-4 py-24 mx-auto">
+                 <div class="container pr-8 pl-4 xl:ml-4 py-24 mx-auto" style="margin-left:auto !important">
                    <div class="flex flex-col text-center w-full mb-20">
                    <!--Come back here later to practice responsive-->
                    <h1 class="sm:text-3xl text-2xl xl:text-3xl font-medium title-font mb-4 text-primary font-sans xl:mt-10">Our Team</h1>
@@ -457,7 +457,7 @@
                    </div>
                  </div>
                </div>
-          
+
              </section>
            </section>
 
